5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1636_869.log
== SUBMITION (2019-04-17 14:52:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input(""))
if(x>=200):
   y= x-0.05*x
	print(round(y,2))
else:
	print(round(x,2))
-- EXECUTION TIME:
0.188449
-- ERROR:
  File "/home/codebench/codes/1636/869/main.py", line 7
    print(round(y,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:52:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input(""))
if(x>=200):
   y= x-0.05*x
	print(round(y,2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 7
    print(round(y,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:53:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input(""))
if(x>=200):
   y= x-0.05*x
	print(round(y,2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 7
    print(round(y,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:53:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input(""))
if(x>=200):
   y= x-0.05*x
	print(round(y,2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 7
    print(round(y,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:53:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input(""))
if(x>=200):
   y= x-0.05*x
	print(round(y,2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 7
    print(round(y,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:53:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input(""))
if(x>=200):
   y= x-0.05*x
	print(round(y,2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 7
    print(round(y,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:53:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input(""))
if(x>=200):
   y= x-0.05*x
	print(round(y,2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 7
    print(round(y,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:53:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input(""))
if(x>=200):
   y= x-0.05*x
	print(round(y,2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 7
    print(round(y,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:54:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input(""))

if(x >= 200):
   y= x - 0.05 * x
	print(round(y,2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y,2))
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:54:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input(""))

if(x >= 200):
   y= x - 0.05 * x
	print(round(y, 2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:55:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preo:"))

if(x >= 200):
   y= x - 0.05 * x
	print(round(y, 2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:55:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preo:"))

if(x >= 200):
   y= x - 0.05 * x
	print(round(y, 2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:55:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preo:"))

if(x >= 200):
   y= x - 0.05 * x
	print(round(y, 2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:55:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preo:"))

if(x >= 200):
   y= x - 0.05 * x
	print(round(y, 2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:55:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x
	print(round(y, 2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:55:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x
	print(round(y, 2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:55:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
  	y= x - 0.05 * x
	print(round(y, 2))
else:
	print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:56:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
  	y= x - 0.05 * x
	print(round(y, 2))
else:
	 print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:56:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
  	y= x - 0.05 * x
	print(round(y, 2))
else:
	 print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:56:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x 
	print(round(y, 2))
else:
   print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:56:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x 
	print(round(y, 2))
else:
   print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:56:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x 
	print(round(y, 2))
else:
   print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:56:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x 
	print(round(y, 2))
else:
   print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:56:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x 
	print(round(y, 2))
else:
   print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 14:56:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x 
	print(round(y, 2))
else:
   print(round(x,2))
-- EXECUTION TIME:
0.202822
-- ERROR:
  File "/home/codebench/codes/1636/869/main.py", line 8
    print(round(y, 2))
                     ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:56:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x 
    print(round(y, 2))
else:
    print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:57:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x 
    print(round(y, 2))
else:
    print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:57:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x 
    print(round(y, 2))
else:
    print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 14:57:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
p= float(input("preco:"))

if(x >= 200):
   y= x - 0.05 * x 
    print(round(y, 2))
else:
    print(round(x,2))
-- ERROR:
File "XXXX", line 8
    print(round(y, 2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
